--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                     <li><a href="employment.html">Employment</a></li>
                     <li><a href="activities.html">Activities</a></li>
                     <li><a href="certifications.html">Certifications</a></li>
-                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                 </ul>
             </nav>
             <main id=""main>
                 <h3 id="heading">Home</h3>
-                <div id="this-one">
+                <div id="description">
                     <img src="profile.jpeg" alt="Anna-Mariya Dzhura">
                     <p>
                         My name is Anna-Mariya Dzhura and I am a senior at
@@ -34,18 +34,20 @@
                         I am originally from Ukraine and have lived in the UK
                         before coming to the US 6 years ago. I am a transfer student,
                         and I attended the University of Rochester before coming to BU.
+                        In my free time I enjoy to play tennis, explore boston, and
+                        travel with my friends.
                     </p>
                 </div>
                 <p id="bottom-p">
                     Welcome to my website, here is my
-                    <strong><em><u><a href="education.html">Education</u></em></strong>
+                    <a href="education.html">Education</a>
                     and my
-                    <strong><em><u><a href="employment.html">Employment</u></em></strong>
+                    <a href="employment.html">Employment</a>
                 </p>
             </main>
         </div>
             <footer>
-                <p>All rights reserved to Anna-Mariya Dzhura <a href="">Credits</a> &#169;</p>
+                <p>All rights reserved by Anna-Mariya Dzhura <a href="">Credits</a> &#169;</p>
                 <div id="time-data"></div>
             </footer>
         </div>
