--- a/activities.html
+++ b/activities.html
@@ -21,7 +21,7 @@
         <li><a href="employment.html">Employment</a></li>
         <li><a href="activities.html">Activities</a></li>
         <li><a href="certifications.html">Certifications</a></li>
-        <li><a href="project.html">Projects</a></li>
+        <li><a href="projects.html">Projects</a></li>
       </ul>
     </nav>
     <main id=""main>
